@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-05
+2012-07-27 Andy Salnikov
+- XmlReader: elementTree in 2.7 comes from xml package, make imports
+  work both in 2.4 and 2.5+
+
 Tag: V00-02-04
 2012-07-08 Joseph S. Barrera III
 - Added psana python support in new file DdlPythonInterfaces.py.
